# yaib

./: CHANGELOG.md  Cargo.toml  README.md  example.yaml  example_command.sh  example_config.yaml  test.yaml
src/: bar.rs  collectors.rs  config.rs  formatter.rs  input.rs  lib.rs  state.rs  unix.rs
