[package]
name = "yaib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
serde_yaml = "^0.9"
anyhow = "^1"
chrono = "^0.4"
fancy-duration = { version = "^0.5", default-features = false, features = [ "chrono" ] }
tokio = { version = "^1", features = [ "full" ] }
mprober-lib = "^0.1"
pretty-bytes = "^0.2"
nix = { version = "^0.27", features = [ "fs" ] }
