[package]
name = "yaib"
version = "0.2.0"
edition = "2021"
description = "yaib is Yet Another i3 Bar, with a focus on displaying lots of data"
authors = ["Erik Hollensbe <git@hollensbe.org>"]
license = "MIT"
homepage = "https://github.com/erikh/yaib"
repository = "https://github.com/erikh/yaib"
keywords = [ "i3", "status", "bar" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
serde_yaml = "^0.9"
anyhow = "^1"
chrono = "^0.4"
fancy-duration = { version = "^0.6", features = [ "chrono" ] }
tokio = { version = "^1", features = [ "full" ] }
mprober-lib = "^0.1"
pretty-bytes = "^0.2"
dirs = "^5"
num_cpus = "^1"
mpris = "^2"

[profile.release]
strip = true
lto = true
codegen-units = 24
opt-level = 3
